# vertexarrayfunctest

./: CMakeLists.txt  main.cpp
